rnsc/test_data/rns_integration/error/parser/type_hints/class/trailing_tokens.rns
.class @class value unexpected_second_operand
.super java/lang/Object